After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664558 - GDBusWorker.frozen has a value > 1 in a gboolean
GDBusWorker.frozen has a value > 1 in a gboolean
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gdbus
2.31.x
Other Linux
: Normal normal
: ---
Assigned To: David Zeuthen (not reading bugmail)
gtkdev
Depends on:
Blocks:
 
 
Reported: 2011-11-22 12:42 UTC by Simon McVittie
Modified: 2011-11-22 16:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (1.46 KB, patch)
2011-11-22 12:43 UTC, Simon McVittie
accepted-commit_now Details | Review

Description Simon McVittie 2011-11-22 12:42:37 UTC
GDBusConnection's initable_init can pass a value greater than 1 as @frozen for _g_dbus_worker_new, namely %G_DBUS_CONNECTION_FLAGS_DELAY_MESSAGE_PROCESSING.

This happens to be harmless, because frozen is a gboolean, which is wide enough for the enum (as opposed to a 1-bit bitfield, which would end up zero), and it's always tested in a boolean context; but it's still wrong.
Comment 1 Simon McVittie 2011-11-22 12:43:46 UTC
Created attachment 201922 [details] [review]
proposed patch
Comment 2 David Zeuthen (not reading bugmail) 2011-11-22 14:51:22 UTC
Comment on attachment 201922 [details] [review]
proposed patch

Sounds good to me, thanks
Comment 3 Simon McVittie 2011-11-22 16:57:40 UTC
Thanks, fixed in c4a11858cf for 2.31.3